--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -21,10 +22,12 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "alt": "^0.18.6",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
     "flux": "^3.1.3",
+    "immutable": "^3.8.2",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
